--- a/index.html
+++ b/index.html
@@ -12,29 +12,25 @@
         <nav>
             <a href="index.html">Inicio</a>
             <a href="blog.html">Blog</a>
-            <a href="#" id="cart-button">Carrito</a>
             <a href="#">Redes</a>
         </nav>
-        <div id="cart">
-            Carrito: <span id="cart-count">0</span> productos
-        </div>
     </header>
     
     <main>
         <div class="product" data-name="Producto 1" data-price="10">
             <h2>Producto 1</h2>
             <p>Precio: $10</p>
-            <button class="add-to-cart">Añadir al carrito</button>
+            <button class="view-product">Ver Producto</button>
         </div>
         <div class="product" data-name="Producto 2" data-price="15">
             <h2>Producto 2</h2>
             <p>Precio: $15</p>
-            <button class="add-to-cart">Añadir al carrito</button>
+            <button class="view-product">Ver Producto</button>
         </div>
         <div class="product" data-name="Producto 3" data-price="20">
             <h2>Producto 3</h2>
             <p>Precio: $20</p>
-            <button class="add-to-cart">Añadir al carrito</button>
+            <button class="view-product">Ver Producto</button>
         </div>
         <!-- Agrega más productos aquí -->
     </main>
